langtools/test/tools/javac/typeAnnotations/failures/common/receiver/DuplicateAnnotationValue.out
DuplicateAnnotationValue.java:9:37: compiler.err.duplicate.annotation.member.value: value, A
1 error
